# book-automation

./: .dockerignore  .env.example  .env.local.example  .env.omnicreator  .env.runtime  .eslintignore  .gitignore  .markdownlint.json  .markdownlintrc  .pre-commit-config.yaml  AI-WRITING-GUIDE.md  API-STATUS-FINAL.md  API_SETUP_GUIDE.md  CHANGELOG.md  CLAUDE-ELITE.md  CLAUDE.md  CLEANUP-GUIDE.md  COMO-VER-PDF-COM-MCP-PUPPETEER.md  CRITICAL-FIXES-COMPLETE.md  DEBUGGING-CHECKLIST.md  DEMO-TEST-SUMMARY.md  DIGITAL-PRESET-SUCCESS.md  Dockerfile  ENGENHEIRO-BRAVO-README.md  EVIDENCE-OF-MISSING-TOOLS.md  GITHUB-AUTH-SOLUTION.md  HOW-TO-USE-MOCK-PIPELINE.md  IMPLEMENTATION-SUMMARY.md  LESSONS-LEARNED.md  LOAD-TEST-RESULTS.md  MCP-AMAZING-INTEGRATIONS.md  MCP-EXPLAINED-CORRECTLY.md  MCP-FINAL-SETUP.md  MCP-FUTURE-INTEGRATIONS.md  MCP-GUIDE.md  MCP-SETUP.md  MOCK-PIPELINE-RESULTS.md  MONEY-MACHINE-GUIDE.md  MONEY-MACHINE-README.md  MONEY-MACHINE-SETUP.md  (+88 more)
.changes/: CHANGELOG.md  changed-files.json
.claude/: AUDIT-FIXES-SUMMARY.md  COMPLETION-REPORT-V2.md  IMPLEMENTATION-STATUS.md  PERFORMANCE-PROTOCOLS.md  QUICK-START.md  cli-headless.js  cli-router.js  fix-claude-update.sh  mcp-pipeline-dashboard.html  status.md  test-mcp-install.sh  test-script.sh  workflow-rules.yaml
.husky/: pre-commit  pre-commit-quality  pre-push
.image_cache/: cache_manifest.json
admin/: HOW-TO-USE.md  jest.config.js  package-lock.json  package.json  server.js  start.sh
agents/: affiliate-injector.js  agent-wrapper.js  book_builder.py  browserstack-qa.js  chat-embedder-websocket.js  chat-embedder.js  deep-research-cached.js  deep-research.js  emotion_palette_engine.py  fact-checker.js  formatter-html-clean.js  formatter-html.js  gumroad-upload.js  hostinger-deploy.js  illustrator.js  image_prompt_agent.py  kdp-upload.js  marketing-automator.js  omnicreator.py  optimizer.js  package.json  planner-debug.js  planner-original.js  planner-wrapper.js  planner.js  price-optimizer.js  template-selector.js  tone-polisher.js  tsconfig.json  watchdog.js  writer-debug.js  writer-gemini-wrapper.js  writer-gemini.js  writer-original.js  writer-with-limits.js  writer-wrapper.js  writer.js
analytics/: README.md  charts.js  collector.js  engine.js  index.html  server.js  start-analytics.sh  styles.css
backup_2025-07-03T04-22-20-485Z/: metadata.yaml
backup_ultra_20250702_214421/: package.json
chapters/: README.md  chapter-01-intro.md  chapter-01-introducao.md  chapter-01-introduction.md  chapter-01-the-beginning.md  chapter-01-you-were-chosen-why-you-keep-seeing-nu.md  chapter-02-111-magnetic-new-beginning.md  chapter-02-111.md  chapter-02-the-middle.md  chapter-03-222-divine-balance-partnerships.md  chapter-03-222.md  (+107 more)
(+1320 files in other folders)
